# orbital-play

./: .gitignore  404.html  README.md  app.py  index.html  mkdocs.yml  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml
developer/: index.html
docs/: developer.md  getting-started.md  index.md  notebooks.md  theory.md  user-guide.md
docs/overrides/: main.html
getting-started/: index.html
javascripts/: mathjax.js
notebooks/: 01_The_Hydrogen_Bond.ipynb  02_VSEPR_and_Hybridization.ipynb  03_The_Art_of_the_Pi_Bond.ipynb  04_Molecular_Polarization.ipynb  05_Attosecond_Dynamics.ipynb  index.html
search/: search_index.json
src/orbital_play/: __init__.py  engine.py  sonify.py  visualize.py
src/orbital_play/tests/: test_app.py  test_engine.py  test_sonify.py
src/quantum_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
theory/: index.html
user-guide/: index.html
